# siren-downloader

./: .gitignore  README.md  eslint.config.js  gui.py  index.html  main.py  main_lrc.py  package.json  pnpm-lock.yaml  requirements.txt
.github/workflows/: build.yml
conf/: config.ini  match.json
icons/: icon.icns
src/: Cargo.toml  best_cover.py  calc_instrument_num.py  check_download.py  check_folder.py  compare_cover.py  config.py  download.py  download_music.py  fetch_data.py  fix_name.py  folder.py  load_config.py  tauri.conf.json  update_data.py
src-tauri/: tauri.conf.json
src/src/: api.rs  config.rs  cover.rs  download.rs  ffmpeg.rs  lib.rs  menu.rs  models.rs  refresh.rs  utils.rs
ui/: globals.css  main.jsx
ui/components/: button.jsx  cover.jsx  input.jsx  menu.jsx  music.jsx  nav.jsx  select.jsx  settings.jsx  tab.jsx  window.jsx
ui/pages/: about.jsx  home.jsx  settings.jsx
ui/utils/: config.js  store.js  year.js
